# solar2d-android-cpp-plugin-sample

android/: .gitignore  build.gradle.kts  settings.gradle
android/plugin/: CMakeLists.txt  build.gradle
android/plugin/src/main/cpp/: plugin.cpp
